--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,28 +1,27 @@
 
+
 body {
  font-size: 20px;
  line-height: 30px;
  font-family: Arial, Helvetica, sans-serif;
  color: #777777;
  background-image: url("../images/bkg.jpeg");
- background:cover;
+ background-position: bottom;
  background-repeat: no-repeat;
  
 
 }
 * {
-  
- box-sizing: border-box;
+  box-sizing: border-box;
 }
 .container {
   width: 100%;
   max-width: 960px;
   margin: 0 auto;
-    clear: both;
-  overflow: auto;
+  clear: both;
   
-  }
-
+  padding-top: 60px;
+}
 h1,h2,h3,p{
   margin-bottom: 20px;
 }
@@ -38,14 +37,23 @@ h1{
   font-size: 30px;
   line-height: 49px;
   border-bottom: 3px solid #ddd;
-  padding-bottom: 10px;
-  padding-top: 1px;
+  padding-bottom: 20px;
+  padding-top: 50px;
 }
 h2,h3{
-  font-size:10px;
+  font-size:22px;
 }
 /* header */
-
+#tophead {
+  position: fixed;
+  z-index: 99;
+  background: #fff;
+  overflow: auto;
+  margin: 0 0 30px;
+  color: #fff;
+  border-bottom: 2px solid #ccc;
+  width: 100%;
+  }
 
 #branding{
   width: 300px;
@@ -59,13 +67,11 @@ h2,h3{
   font-size: 30px;
   text-decoration: none;
   white-space: nowrap;
-  padding-top: 25px;
+  padding-top: 50px;
   margin-top: 40px;
-  padding-bottom: 60px;
+  padding-bottom: 40px
+  
 }
-  
-  
-
 
 nav{
   float: right;
@@ -82,7 +88,10 @@ nav a {
 nav a:first-child {
   border-left: 0 none;
 }
-
+.maincontainer{
+  padding-top: 130px;
+  min-height: calc(100vh-70px);
+}
 .topsection{
   float: left;
   width: 100%;
@@ -101,7 +110,16 @@ nav a:first-child {
   float: left;
   margin-right: 25px;
 }
-
+footer{
+  background: #666;
+  color: #fff;
+  padding: 30px 0;
+  clear: both;
+  border-top: 10px solid #4aaaa5;
+  color: #ccc;
+  font-size: 12px;
+  text-align: center;
+}
 /*portfolio*/
 .igm {
    position: relative;
@@ -170,17 +188,59 @@ input[type=submit] {
   border: 0 none;
 }
 
-footer {
-  background: #666;
-  color: #fff;
-  width: 100%;
-  bottom: 0;
-  position: fixed;
-  height: 10px;
-  padding: 30px 0;
-  clear: both;
-  border-top: 10px solid #4aaaa5;
-  color: #ccc;
-  font-size: 12px;
-  text-align: center;
+
+@media screen and (max-width: 980px) {
+   .bodycontainer {
+     background-color: teal;
+   }
+ }
+
+ @media screen and (max-width: 768px) {
+   .container {
+     background: blanchedalmond;
+   }
+ }
+
+  @media screen (max-width: 640px) {
+   .tophead{
+     ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    width: 60px;
+} 
+
+li a {
+    display: block;
 }
+   }
+  }
+
+
+
+
+
+
+
+
+/* css animations */
+
+@keyframes example {
+    from {background-color: red;}
+    to {background-color: yellow;}
+}
+
+/* The element to apply the animation to */
+footer {
+   
+    background-color: red;
+    animation-name: example;
+    animation-duration: 4s;
+}
+
+
+
+
+
+
+  
